# gecko-recipes

./: .envrc  .envrc.example  Cargo.toml  README.md  compose.yml
migrations/: 20250825175334_initial_migration.sql
src/: lib.rs  main.rs
src/core/: recipe.rs
src/persistance/: mod.rs  recipe.rs
src/persistance/implementation/: postgres.rs
src/presentation/: mod.rs  recipe.rs
